# vaq-make

./: .gitignore  CMakeLists.txt  LICENSE  Makefile.old  README.md  VMake.vmake
doc/: vaq-make.md  vmake.md
include/: array.h  common.h  config.h  file.h  generator.h  native.h  object.h  scanner.h  table.h  value.h
include/native/: class.h  fun.h
private/: generator-priv.h  scanner-priv.h
src/: array.c  config.c  file.c  generator.c  native.c  object.c  scanner.c  table.c  value.c  vaq-make.c
src/native/: class.c  fun.c
test/: CMakeLists.txt  main.py
test/expressions/assignment/: VMake.vmake  out
test/expressions/comparison/numbers/: VMake.vmake
test/expressions/comparison/other/: VMake.vmake  error
test/expressions/equality/: VMake.vmake  out
test/expressions/math/: VMake.vmake  out
test/expressions/primary/: VMake.vmake  out
test/expressions/subscript/array/1d/: VMake.vmake
test/expressions/subscript/array/2d/: VMake.vmake  out
test/expressions/subscript/array/3d/: VMake.vmake  out
test/expressions/subscript/array/double_index/: VMake.vmake  error
test/expressions/subscript/array/index_too_big/: VMake.vmake  error
test/expressions/subscript/array/inline/: VMake.vmake
test/expressions/subscript/array/non_array_target/: VMake.vmake  error
test/natives/function/call_bad_argc/: VMake.vmake  error
test/natives/function/call_bad_argc_type/: VMake.vmake  error
test/natives/function/call_good_argc/: VMake.vmake
test/natives/function/call_return_value/: VMake.vmake  out
test/natives/function/print/: VMake.vmake  out
(+16 files in other folders)
